Support external cleanup definitions